--- a/proyecto/app.json
+++ b/proyecto/app.json
@@ -4,7 +4,7 @@
     "slug": "proyecto",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/logo.png",
+    "icon": "./assets/images/logo192.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "splash": {
@@ -17,7 +17,7 @@
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/images/logo.png",
+        "foregroundImage": "./assets/images/logo192.png",
         "backgroundColor": "#ffffff"
       },
       "package": "com.pablo44.proyecto"
@@ -25,7 +25,7 @@
     "web": {
       "bundler": "metro",
       "output": "static",
-      "favicon": "./assets/images/logo.png"
+      "favicon": "./assets/images/logo192.png"
     },
     "plugins": [
       "expo-router"
