--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-google-signin/google-signin": "^12.2.1",
     "@react-navigation/native": "^6.0.2",
     "expo": "~51.0.28",
     "expo-auth-session": "~5.5.2",
