--- a/proyecto/package.json
+++ b/proyecto/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-native-fontawesome": "^0.3.2",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/progress-bar-android": "^1.0.5",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-google-signin/google-signin": "^12.2.1",
